tests/e2e/semantics/foreach_dict_key_float.story
b = {1.1: 1}
foreach b as k,v
    k = "a"
